--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 
 * {
   margin: 0;
+  border: 1px solid black;
 }
 
 body {
@@ -32,4 +33,93 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   text-wrap: balance;
+}
+
+/* start */
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  align-items: center;
+  padding: 4px 16px;
+  justify-content: space-between;
+}
+
+.header > button {
+  font-size: 1.5rem;
+  background-color: transparent;
+  border: none;
+}
+
+.board {
+  flex: 23;
+
+  padding: 32px 8px;
+  overflow-y: scroll;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, clamp(150px, 15%, 25%));
+  grid-auto-rows: clamp(150px, 20%, 25%);
+  justify-content: center;
+  gap: 16px;
+}
+
+.board > .add-project {
+  font-size: 2rem;
+  text-align: center;
+  align-content: center;
+  background-color: rgb(240, 240, 240);
+}
+
+.board > .project-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.project-item > div {
+  flex: 3;
+
+  width: 100%;
+}
+
+.project-item > h2 {
+  flex: 1;
+
+  width: 100%;
+  padding: 0px 8px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+dialog {
+  display: none;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgba(0, 0, 0, 0.25);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.add-project-dialog > form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  padding: 32px;
+}
+
+.add-project-dialog > form > button {
+  width: fit-content;
+  align-self: center;
 }
