--- a/src/styles.css
+++ b/src/styles.css
@@ -52,15 +52,22 @@ body {
   justify-content: space-between;
 }
 
-.header > button {
+.header > a {
   font-size: 1.5rem;
-  background-color: transparent;
-  border: none;
+  text-decoration: none;
 }
+
+
+
+/* Projects */
 
 .board {
   flex: 23;
+}
 
+.board > .projects {
+  width: 100%;
+  height: 100%;
   padding: 32px 8px;
   overflow-y: scroll;
 
@@ -71,17 +78,32 @@ body {
   gap: 16px;
 }
 
-.board > .add-project {
+.projects > .add-project {
   font-size: 2rem;
   text-align: center;
   align-content: center;
   background-color: rgb(240, 240, 240);
 }
 
-.board > .project-item {
+.projects > .project-item {
+  cursor: pointer;
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.project-item > .delete-btn {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  background-color: transparent;
+  border: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+  line-height: 1;
+  width: fit-content;
 }
 
 .project-item > div {
@@ -100,8 +122,16 @@ body {
   text-overflow: ellipsis;
 }
 
-dialog {
+.board > .project {
   display: none;
+}
+
+
+
+/* Dialog */
+
+dialog {
+  display: flex;
   align-items: center;
   justify-content: center;
 
@@ -122,4 +152,12 @@ dialog {
 .add-project-dialog > form > button {
   width: fit-content;
   align-self: center;
+}
+
+.none-display {
+  display: none;
+}
+
+.board > .projects.none-display {
+  display: none;
 }
