--- a/src/styles.css
+++ b/src/styles.css
@@ -85,9 +85,11 @@ body {
   background-color: rgb(240, 240, 240);
 }
 
-.projects > .project-item {
+div[data-swapy-slot] > .project-item {
   cursor: pointer;
   position: relative;
+  width: 100%;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
@@ -96,14 +98,29 @@ body {
 
 .project-item > .delete-btn {
   position: absolute;
-  top: 4px;
-  right: 4px;
-  background-color: transparent;
-  border: none;
+  top: 0px;
+  right: 0px;
+  background-color: rgb(240, 240, 240, 0.5);
+  width: 24px;
+  height: 24px;
   font-size: 1.2rem;
   cursor: pointer;
   line-height: 1;
-  width: fit-content;
+  text-align: center;
+}
+
+.project-item > .handle {
+  background-image: url(assets/icons/handle.svg);
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgb(240, 240, 240, 0.5);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 24px;
+  height: 24px;
+  cursor: grab;
 }
 
 .project-item > div {
