--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,9 @@
 
 * {
   margin: 0;
+}
+
+body > * {
   border: 1px solid black;
 }
 
@@ -69,7 +72,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 32px 8px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, clamp(150px, 15%, 25%));
@@ -143,7 +146,53 @@ div[data-swapy-slot] > .project-item {
 }
 
 .board > .project {
-  display: none;
+  height: 100%;
+  min-width: 100%;
+  overflow-x: auto;
+  padding: 16px;
+
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: clamp(180px, 18vw, 300px);
+  grid-template-rows: 1fr;
+  gap: 16px;
+}
+
+.project > div {
+  height: fit-content;
+  padding: 8px;
+  border: 1px solid black;
+}
+
+.project .list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 8px;
+}
+
+.project .title {
+  border: none;
+}
+
+.project .title:focus {
+  outline-style: none;
+  border: 1px solid black;
+}
+
+.project .card-item {
+  border: none;
+}
+
+.project .card-item:focus {
+  outline-style: none;
+  border: 1px solid blue
+}
+
+.project .card-item:disabled {
+  border: none;
+  outline-style: none;
+  color: black;
 }
 
 
@@ -174,10 +223,18 @@ dialog {
   align-self: center;
 }
 
+
+
+/* Toggle */
+
 .none-display {
   display: none;
 }
 
 .board > .projects.none-display {
+  display: none;
+}
+
+.board > .project.none-display {
   display: none;
 }
