--- a/src/styles.css
+++ b/src/styles.css
@@ -234,9 +234,39 @@ div[data-swapy-slot] > .project-item {
   height: 100%;
 }
 
-.board .card-modal > div {
+.card-modal > .modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
   padding: 32px;
   background-color: white;
+}
+
+.modal-content .card-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+
+  padding: 0px;
+  position: relative;
+}
+
+.card-menu > div {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-menu label[for="date"] {
+  font-size: 12px;
+  position: absolute;
+  top: -16px;
+  left: 5px;
+}
+
+.card-menu button {
+  height: fit-content;
 }
 
 .board .card-modal.none-display {
