--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,12 @@
 /* styles.css */
+@font-face {
+  font-family: 'Baloo 2';
+  src: url('./assets/fonts/Baloo\ 2/Baloo2-Regular.woff2') format('woff2'),
+      url('./assets/fonts/Baloo\ 2/Baloo2-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -10,6 +18,7 @@
 
 body > * {
   border: 1px solid black;
+  font-family: 'Baloo 2';
 }
 
 body {
@@ -46,6 +55,11 @@ body {
   height: 100dvh;
 }
 
+body * {
+  background-color: #121212;
+  color: #e0e0e0;
+}
+
 .header {
   display: flex;
   flex-direction: row;
@@ -58,10 +72,11 @@ body {
 .header > a {
   font-size: 1.5rem;
   text-decoration: none;
+  color: #e0e0e0;
 }
 
 .header > a:visited{
-  color: rgb(0, 0, 0);
+  color: #e0e0e0;
 }
 
 
@@ -85,6 +100,13 @@ body {
   gap: 16px;
 }
 
+.projects * {color: black;}
+
+.projects > * {
+  border-radius: 4px 4px 12px 12px;
+  overflow: hidden;
+}
+
 .projects > .add-project {
   font-size: 2rem;
   text-align: center;
@@ -104,6 +126,8 @@ div[data-swapy-slot] > .project-item {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 4px 4px 12px 12px;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
@@ -118,6 +142,7 @@ div[data-swapy-slot] > .project-item {
 }
 
 .project-item .delete-btn {
+  background-image: url(./assets/icons/delete.svg);
   background-color: rgb(240, 240, 240, 0.5);
   width: 24px;
   height: 24px;
@@ -190,6 +215,7 @@ div[data-swapy-slot] > .project-item {
 }
 
 .project .list-header .delete-btn {
+  background-image: url(./assets/icons/delete-white.svg);
   width: 24px;
   height: 24px;
   text-align: center;
@@ -197,7 +223,7 @@ div[data-swapy-slot] > .project-item {
 }
 
 .project .add-list:hover {
-  background-color: rgb(220, 220, 220);
+  background-color: #1e1e1e;
   cursor: pointer;
 }
 
@@ -218,6 +244,7 @@ div[data-swapy-slot] > .project-item {
   border: none;
   width: 100%;
   padding: 4px 8px;
+  color: #e0e0e0;
   pointer-events: none;
 }
 
@@ -240,13 +267,13 @@ div[data-swapy-slot] > .project-item {
   gap: 8px;
 
   padding: 32px;
-  background-color: white;
+  background-color: #121212;
 }
 
 .modal-content .card-menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
 
   padding: 0px;
@@ -261,7 +288,7 @@ div[data-swapy-slot] > .project-item {
 .card-menu label[for="date"] {
   font-size: 12px;
   position: absolute;
-  top: -16px;
+  top: -18px;
   left: 5px;
 }
 
@@ -281,7 +308,6 @@ div[data-swapy-slot] > .project-item {
 .project .card-item:disabled {
   border: none;
   outline-style: none;
-  color: black;
 }
 
 .project .add-card {
@@ -289,7 +315,7 @@ div[data-swapy-slot] > .project-item {
 }
 
 .project .add-card:hover {
-  background-color: rgb(220, 220, 220);
+  background-color: #1e1e1e;
   cursor: pointer;
 }
 
