--- a/src/styles.css
+++ b/src/styles.css
@@ -254,9 +254,11 @@ div[data-swapy-slot] > .project-item {
   align-items: center;
 
   background-color: rgba(0, 0, 0, 0.25);
-  position: absolute;
+  border: none;
+  position: fixed;
   top: 0;
   left: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
 }
@@ -264,17 +266,26 @@ div[data-swapy-slot] > .project-item {
 .card-modal > .modal-content {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 24px;
 
+  width: calc(50dvw + 64px);
+  max-width: 600px;
+  height: fit-content;
+  max-height: 75dvh;
   padding: 32px;
   background-color: #121212;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .modal-content .card-menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  column-gap: 56px;
+  row-gap: 16px;
   align-items: center;
+  flex-wrap: wrap;
 
   padding: 0px;
   position: relative;
@@ -283,6 +294,7 @@ div[data-swapy-slot] > .project-item {
 .card-menu > div {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .card-menu label[for="date"] {
@@ -302,12 +314,29 @@ div[data-swapy-slot] > .project-item {
   gap: 8px;
 }
 
-.modal-content .buttons {
-  align-self: flex-end;
-
+.card-details .card-details-header {
   display: flex;
   flex-direction: row;
+  justify-content: start;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.card-details-header > h3:first-child {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+
+.modal-content .buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 12px;
+
+  margin-left: auto;
 }
 
 .board .card-modal.none-display {
@@ -343,7 +372,7 @@ div[data-swapy-slot] > .project-item {
   justify-content: center;
 
   background-color: rgba(0, 0, 0, 0.25);
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
 }
@@ -351,9 +380,23 @@ div[data-swapy-slot] > .project-item {
 .add-project-dialog > form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 8px;
 
+  width: fit-content;
+  max-width: calc(35dvw + 64px);
+  height: fit-content;
+  max-height: 75dvh;
   padding: 32px;
+  overflow-y: auto;
+}
+
+.add-project-dialog > form > label {
+  margin-right: auto;
+}
+
+.add-project-dialog > form > input {
+  max-width: 30dvw;
 }
 
 .add-project-dialog > form > button {
