--- a/src/styles.css
+++ b/src/styles.css
@@ -352,6 +352,10 @@ div[data-swapy-slot] > .project-item {
   max-width: 100%;
 }
 
+.card-details-header > h3:first-child:focus {
+  outline: 2px solid #e0e0e0;
+}
+
 .card-details > .checklist-container {
   display: flex;
   flex-direction: column;
